--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,28 @@
+.task-title {
+  color: #18c91e;
+  font-size: 30px;
+}
+
+.task {
+  color: #be0eb6;
+  font-size: 25px;
+}
+
 .gallery {
   list-style: none;
   display: flex;
   justify-content: space-between;
   width: 1400px;
+}
+
+#validation-input {
+  border: 3px solid #bdbdbd;
+}
+
+#validation-input.valid {
+  border-color: #4caf50;
+}
+
+#validation-input.invalid {
+  border-color: #f44336;
 }
